# OnlineBooking

./: .dockerignore  .env.prod  .env_example  .flake8  Dockerfile  Makefile  README.md  TODO  docker-compose.prod.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml  req.txt  updated_codes
.github/workflows/: ci.yml
OnlineBooking/: asgi.py  settings.py  urls.py  wsgi.py
app/: models.py  urls.py
apps/: __init__.py  urls.py
apps/app/: admin.py  admin_forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/app/management/commands/: adds.py
apps/app/templates/apps/widgets/: leaflet_location.html
apps/app/tests/: test_models.py  test_urls.py
apps/authentication/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/authentication/fixtures/: users.json
apps/authentication/migrations/: 0001_initial.py
apps/authentication/models/: proxies.py  users.py
apps/service/: admin.py  apps.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/service/management/commands/: adds.py
apps/service/migrations/: 0001_initial.py  0002_initial.py
apps/service/templates/apps/widgets/: leaflet_location.html
apps/service/tests/: test_models.py  test_serializers.py  test_urls.py  test_views.py
apps/shared/: apps.py  filters.py  manager.py  models.py  paginations.py
apps/stats/: serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  proxies.py  users.py
authen/: admin.py  customs.py  models.py  permissions.py  rights.py  serializers.py  urls.py  utils.py  views.py
authen/fixtures/: users.json
authen/migrations/: 0001_initial.py
authen/services/: __init__.py  otp_service.py
authen/utils/: __init__.py  otp.py
bot/: const.py  loader.py  main.py
bot/buttons/: inline.py  reply.py
bot/handlers/: __init__.py  auth.py  booking.py  feedback.py  main.py  start.py
deploy/: entrypoint.sh  migrate.sh  remote_deploy.sh
locales/: messages.pot
locales/ru/LC_MESSAGES/: messages.mo  messages.po
locales/uz/LC_MESSAGES/: messages.mo  messages.po
root/: health.py  settings.py  urls.py
static/css/: login.css
static/js/: login.js
templates/auth/: login.html
