[project]
name = "onlinebooking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "argon2-cffi>=25.1.0",
    "babel>=2.17.0",
    "django>=5.2.5",
    "django-filter>=25.1",
    "django-geoposition>=0.3.0",
    "django-leaflet>=0.32.0",
    "django-map-widgets>=0.5.1",
    "django-utils-six>=2.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.8.1",
    "faker>=37.8.0",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
    "orjson>=3.11.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.5.0",
    "pytest-django>=4.11.1",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "redis>=6.4.0",
    "starlette-admin>=0.15.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "root.settings"
# -- recommended but optional:
python_files = ["test_*.py", "tests.py", "*_test.py", "tests/*.py"]
